<resources>
    <string name="app_name">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Create New  Account</string>
    <string name="username">Username</string>
    <string name="Register">Register</string>
    <string name="Already">Already Have Any Accout</string>
</resources>